every is done because UX don't perfect,so i fix a bit

--- a/css/index.css
+++ b/css/index.css
@@ -95,3 +95,11 @@
   box-shadow: -3px -3px 7px #fff, 3px 3px 5px #ceced1;
   border-left-color: rgba(0, 162, 255, 0.938);
 }
+
+.hidden {
+  display: none;
+}
+
+.show {
+  display: block;
+}
